# musescore

./: LICENSE  README.md  requirements.txt  setup.cfg
src/musescore/: __init__.py  musescore.py
src/musescore.egg-info/: PKG-INFO  SOURCES.txt
src/musescore_ryanrudes.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
