[metadata]
name = musescore
version = 0.0.2
author = Ryan Rudes
author_email = ryanrudes@gmail.com
description = A tool for scraping sheet music from musescore.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryanrudes/musescore
project_urls =
    Bug Tracker = https://github.com/ryanrudes/musescore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
